Moving to try CSS Grid for the navbar and its contents to get them to align correctly.:

--- a/src/index.css
+++ b/src/index.css
@@ -514,13 +514,49 @@ label {
   .NavBarParent { 
     top:auto; 
     bottom:0px;
-    max-height: 8%;
+    text-align: center;
+    padding-top: 10px;
+  }
+  .NavBar {
+    display:none;
+    display: flex; 
+    /* flex-flow: wrap; */
+    justify-content: space-evenly;
+    position: relative;
+    margin-right: 10px;
   }
   .NavBarButton{
     font-size: 0.8rem;
+    /* width: 10%; */
+    margin: 5px;
+    background: var(--otmCardColor);
+    color: var(--otmHoverColor);
+  }
+
+  .title {
+    font-size: 2rem;
+    margin: 0 auto; 
+    margin-top: 10px;
+    width: 90%;
+    text-align: center;
   }
 
   #mainContainer{
-    margin-top: 10px;
+    margin: 10px; 
+    /* margin-top: 10px; */
+    max-height: 50%;
   }
+
+  .about{
+    /* margin: 0px; */
+  }
+  /* .map{
+    width:90%;
+  } */
+  /* .AttractionList{
+    position: absolute;
+    z-index: 4;
+    visibility: hidden;
+    width: 80%; 
+  } */
 }
